[metadata]
name = soundvectors
version = 1.1.dev0
author = Arne Rubehn
author_email = arne.rubehn@uni-passau.de
description = Vectorizing Speech Sounds in Phonetic Transcription
long_description = file: README.md
long_description_content_type = text/markdown
keywords = linguistics, speech sounds, feature vectors, CLTS
license = MIT
license_files = LICENSE
url = https://github.com/cldf-clts/soundvectors
project_urls =
    Bug Tracker = https://github.com/cldf-clts/soundvectors/issues
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    License :: OSI Approved :: Apache Software License

[options]
zip_safe = False
packages = find:
package_dir =
    = src
python_requires = >=3.8
install_requires =
py_modules = soundvectors
include_package_data = True

[options.packages.find]
where = src

[options.extras_require]
dev =
    pyclts
    cltoolkit
    scikit-learn
    seaborn
    numpy
    matplotlib
    lingpy
    build
test =
    pyclts
    linse
    pytest
    pytest-cov
[bdist_wheel]
universal = 1

[flake8]
ignore = E711,E712,D100,D101,D103,D102,D301,W503
max-line-length = 100
exclude = .tox

[tool:pytest]
minversion = 5
testpaths = tests
addopts = --cov

[easy_install]
zip_ok = false

[coverage:run]
source =
    soundvectors
    tests

[coverage:report]
show_missing = true
skip_covered = true

[tox:tox]
envlist = py38, py39, py310, py311, py312
isolated_build = true
skip_missing_interpreter = true

[testenv]
deps = .[test]
commands = pytest {posargs}
